--- a/contributions/didactor2/src/mmbob/config/translations/mmbob.properties
+++ b/contributions/didactor2/src/mmbob/config/translations/mmbob.properties
@@ -23,7 +23,6 @@ fakereplys=THIS PAGE GENERATES FAKE REPLYS BE CAREFUL
 numofreplystocreate=Number of replys to be created
 selectinwhichpostarea=Select in which postarea
 fakethreads=THIS PAGE GENERATES FAKE THREADS BE CAREFUL
-changeforum=change forum
 numofthreadstocreate=Number of threads to be created
 generate=generate
 mmbobautogenerator=MMBob Auto Generator
@@ -63,7 +62,6 @@ welcometoforum3=forum
 lasttimelogin=Last time logged in
 membersince=Member since
 password=password
-account=account
 visitorsonline1=
 visitorsonline2=visitors online.
 moderatorteam=The moderator team
@@ -94,10 +92,7 @@ accounthbcreated1=Your account has been created, you can
 accounthbcreated2link=log in now
 createnewpm=Create new private message
 to=To
-membersonline=members online
-allmembers=all members
 pm=private messages
-moderatorteam=moderator team
 startedby=Started by
 admin=admin
 changearea=change area
@@ -110,11 +105,9 @@ addfolder=Add Folder
 pmquota=PM Quota
 youusing=You are using 10% of your quota
 sender=Sender
-subject=Subject
 date=Date
 from=From
 mailbox=Mailbox
-membersince=Member since
 lastvisit=Last visit
 actions=Actions
 deletemsgfromfolder=Delete message from folder
@@ -140,7 +133,6 @@ inbox=Inbox
 persm=privatemessages
 personal=personal
 avatar=avatar
-numberofmessages=Number of messages
 lastvisiton=Last visit on
 boe=boe
 presentavatar=Present Avatar
@@ -153,7 +145,8 @@ accountnotfound=** account has not been found **
 enterlogin=Enter your login name, not this is not the same as your email address !
 loginname=Login name
 selectforumtoremove=Select the forum you want to remove
-suredeleteforum=Are you sure you want to delete forum <forumname>?
+suredeleteforum1=Are you sure you want to delete forum
+suredeleteforum2=?
 warningallwbremoved=This implies that all areas, subjects, responses and posters will be removed !!!
 removemoderatorfor=Remove moderator for :
 wantdeletemessage1=Dou you want to delete the following message
@@ -189,7 +182,6 @@ numberofmembers=Number of members
 numberofviews=Number of views
 numberofnew=Number of new
 new=New
-cancel=Cancel
 commit=Commit
 delete=Delete
 numberonline=Number online
