--- a/contributions/didactor2/src/core/config/translations/core.nl.properties
+++ b/contributions/didactor2/src/core/config/translations/core.nl.properties
@@ -29,3 +29,15 @@ deletethiscomponentyesno=Wilt u deze component verwijderen?
 home=start
 print=print
 listallportfolios=Bekijk de publieke portfolios
+studentonline=Student online
+studentoffline=Student offline
+teacheronline=Leraar online
+teacheroffline=Leraar offline
+editoronline=Editor online
+editoroffline=Editor offline
+administratoronline=Beheerder online
+administratoroffline=Beheerder offline
+providers=Aanbieders
+emailaddress=Email adres
+firstname=Voornaam
+lastname=Achternaam
