--- a/contributions/didactor2/src/email/config/translations/email.nl.properties
+++ b/contributions/didactor2/src/email/config/translations/email.nl.properties
@@ -1,49 +1,54 @@
 addressbook=Adresboek
-to=aan
-cc=cc
-name=Naam
-email=E-mail
 administrators=Beheerders
-teachers=Leraren
-students=Studenten
-usethese=Gebruik deze
-hide=Verberg
-renamefolder=Hernoemen map
-rename=Hernoemen
-back=Terug
-mailboxnamenotempty=Geef een naam op voor de map
-createfolder=Aanmaken map
-create=Aanmaken
-deletefolderitems=Verwijder mapitems
-deleteyes=Ja
-deleteno=Nee
-move=Verplaatsen
-deletefolderitemsyesno=Wilt u de geselecteerde mapitems verwijderen?
-deletefolder=Verwijder map
-deletefolderyesno=Wilt u deze map verwijderen met alle items?
-selectoneitem=Selecteer minimaal een item door het aan te vinken.
-mailboxes=Mappen
-writenewemail=Maak nieuwe e-mail
-moveselected=Verplaats geselecteerde
-deleteselected=Verwijder geselecteerde
-emailtitle=e-mail
-moveitems=Verplaatsen items
-filesto=bestand(en) naar:
-movesingle=Verplaats
-mailbox=Mailbox
-emailattachment=E-mail bijlage
-toempty=Voer een ontvanger in voor dit email bericht!
-subjectempty=Voer een onderwerp in voor dit email bericht!
-bodyempty=Voer de tekst van het bericht in!
-writemessage=Schrijf bericht
-subject=Onderwerp
 attachments=Bijlage(n)
+back=Terug
+bodyempty=Voer de tekst van het bericht in!
+cc=cc
+create=Aanmaken
+createfolder=Aanmaken map
+deletefolder=Verwijder map
+deletefolderitems=Verwijder mapitems
+deletefolderitemsyesno=Wilt u de geselecteerde mapitems verwijderen?
+deletefolderyesno=Wilt u deze map verwijderen met alle items?
+deleteno=Nee
+deleterules=Wis regels
 deleterulesyesno=Wis regels?
-matchwhat=Veld
-substring=Match
+deleteselected=Verwijder geselecteerde
+deleteyes=Ja
+email=E-mail
+emailattachment=E-mail bijlage
+emailtitle=e-mail
+filesto=bestand(en) naar:
 folder=Mailbox
-sender=Afzender
-subject=Onderwerp
+forward=Stuur door
+hide=Verberg
+lookup_cc=Lookup cc
+lookup_to=Lookup to
+mailbox=Mailbox
+mailboxes=Mappen
+mailboxnamenotempty=Geef een naam op voor de map
 mailrules=Mail regels
-createnewrule=Maak nieuwe mail regel
-
+matchwhat=Veld
+move=Verplaatsen
+moveitems=Verplaatsen items
+moveselected=Verplaats geselecteerde
+movesingle=Verplaats
+name=Naam
+rename=Hernoemen
+renamefolder=Hernoemen map
+reply=Beantwoord
+replyall=Beantwoord allen
+send=Verstuur
+sender=Afzender
+students=Studenten
+subject=Onderwerp
+subjectempty=Voer een onderwerp in voor dit email bericht!
+substring=Match
+teachers=Leraren
+to=aan
+toempty=Voer een ontvanger in voor dit email bericht!
+updateattachments=Update attachments
+usethese=Gebruik deze
+writemessage=Schrijf bericht
+writenewemail=Maak nieuwe e-mail
+writenewrule=Schrijf nieuwe regel
