--- a/contributions/didactor2/src/email/config/translations/email.properties
+++ b/contributions/didactor2/src/email/config/translations/email.properties
@@ -1,49 +1,54 @@
 addressbook=Addressbook
-to=to
-cc=cc
-name=Name
-email=E-mail
 administrators=Administrators
-teachers=Teachers
-students=Students
-usethese=Use these
-hide=Hide
-renamefolder=Rename folder
-rename=Rename
-back=Back
-mailboxnamenotempty=Give a name for the folder
-createfolder=Create folder
-create=Create
-deletefolderitems=Delete folderitems
-deleteyes=Yes
-deleteno=No
-move=Move
-deletefolderitemsyesno=Do you want to delete the selected items?
-deletefolder=Delete folder
-deletefolderyesno=Do you want to delete this folder with all items?
-selectoneitem=Select at least one item.
-mailboxes=Folders
-writenewemail=Write new e-mail
-moveselected=Move selected
-deleteselected=Delete selected
-emailtitle=e-mail
-moveitems=Move items
-filesto=file(s) to:
-movesingle=Move
-mailbox=Mailbox
-emailattachment=E-mail attachment
-toempty=Give a receiver for this e-mail message!
-subjectempty=Give a subject for this e-mail message!
-bodyempty=Give text for this e-mail message!
-writemessage=Write message
-subject=Subject
 attachments=Attachment(s)
+back=Back
+bodyempty=Give text for this e-mail message!
+cc=cc
+create=Create
+createfolder=Create folder
+deletefolder=Delete folder
+deletefolderitems=Delete folderitems
+deletefolderitemsyesno=Do you want to delete the selected items?
+deletefolderyesno=Do you want to delete this folder with all items?
+deleteno=No
+deleterules=Delete rules
 deleterulesyesno=Delete rules?
-matchwhat=Field
-substring=Match
+deleteselected=Delete selected
+deleteyes=Yes
+email=E-mail
+emailattachment=E-mail attachment
+emailtitle=e-mail
+filesto=file(s) to:
 folder=Mailbox
-sender=Sender
-subject=Subject
+forward=Forward
+hide=Hide
+lookup_cc=Lookup cc
+lookup_to=Lookup to
+mailbox=Mailbox
+mailboxes=Folders
+mailboxnamenotempty=Give a name for the folder
 mailrules=Mail rules
-createnewrule=Create new mail rule
-
+matchwhat=Field
+move=Move
+moveitems=Move items
+moveselected=Move selected
+movesingle=Move
+name=Name
+rename=Rename
+renamefolder=Rename folder
+reply=Reply
+replyall=Reply all
+send=Send
+sender=Sender
+students=Students
+subject=Subject
+subjectempty=Give a subject for this e-mail message!
+substring=Match
+teachers=Teachers
+to=to
+toempty=Give a receiver for this e-mail message!
+updateattachments=Update attachments
+usethese=Use these
+writemessage=Write message
+writenewemail=Write new e-mail
+writenewrule=Write new rule
