--- a/contributions/didactor2/src/workspace/config/translations/workspace.nl.properties
+++ b/contributions/didactor2/src/workspace/config/translations/workspace.nl.properties
@@ -1,62 +1,54 @@
-mydocuments=Mijn documenten
+addchatlog=Chatverslag plaatsen
 addcontacts=Leden bewerken
-shareddocuments=Gedeelde documenten
-folders=Mappen
-createfolder=Aanmaken map
-renamefolder=Hernoemen map
-deletefolder=Verwijderen map
-title=Titel
-description=Beschrijving
-filename=Bestand
-date=Datum
-create=aanmaken
-rename=hernoemen
-move=verplaatsen
-open=openen
-movesingle=Verplaats
-filesto=bestand(en) naar:
-back=terug
 adddocument=Document plaatsen
 addsource=Informatiebron plaatsen
-addchatlog=Chatverslag plaatsen
-moveselected=Verplaats geselecteerde
-deleteselected=Verwijder geselecteerde
-selectoneitem=Selecteer minimaal een item door het aan te vinken.
-folderopened=map geopend
-folderclosed=map gesloten
-moveitems=Verplaatsen items
-openitem=Open item
-folderitemtypeurl=informatiebron
-folderitemtypedocument=document
-folderitemtypepage=pagina
-folderitemtypechatlog=chatverslag
-type=Type
-foldernamenotempty=Geef een naam voor de map
-mydocumentsmenuitem=mijn documenten
-shareddocumentsmenuitem=klas documenten
-workgroupdocumentsmenuitem=werkgroep documenten
-workgroupdocuments=werkgroep documenten
-projectgroupdocuments=projectgroep documenten
-deleteyes=ja
-deleteno=nee
-deletethisfolderyesno=Wilt u deze map inclusief de inhoud echt verwijderen?
-deletefolderitemsyesno=Wilt u de geselecteerde mapitems echt verwijderen?
-deletefolderitems=Verwijder mapitems
 addurl=URL toevoegen
-save=opslaan
-reactions=Reacties
-react=reageer
-portfolio=Portfolio
-choose_a_letter_or_search=Bekijk op alfabet of zoek
-search=Zoek
-projectgroups=projectgroepen
-projectgroupnamenotemtpy=Naam mag niet leeg zijn
-projectnamenotemtpy=Naam mag niet leeg zijn
+back=terug
+create=aanmaken
+createfolder=Aanmaken map
+createprojectgroup=Projectgroep aanmaken
+date=Datum
+deletecontacts=Leden verwijderen
+deletecontactsyesno=Deze leden verwijderen?
+deletefolder=Verwijderen map
+deletefolderitems=Verwijder mapitems
+deletefolderitemsyesno=Wilt u de geselecteerde mapitems echt verwijderen?
+deleteno=nee
 deleteprojectgroup=Projectgroep verwijderen
 deleteprojectgroupyesno=Deze projectgroep verwijderen?
-createprojectgroup=Projectgroep aanmaken
+deleteselected=Verwijder geselecteerde
+deletethisfolderyesno=Wilt u deze map inclusief de inhoud echt verwijderen?
+deleteyes=ja
+description=Beschrijving
+filename=Bestand
+filesto=bestand(en) naar:
+folderclosed=map gesloten
+folderitemtypechatlog=chatverslag
+folderitemtypedocument=document
+folderitemtypepage=pagina
+folderitemtypeurl=informatiebron
+foldernamenotempty=Geef een naam voor de map
+folderopened=map geopend
+folders=Mappen
+move=verplaatsen
+moveitems=Verplaatsen items
+moveselected=Verplaats geselecteerde
+movesingle=Verplaats
+mydocuments=Mijn documenten
+mydocumentsmenuitem=mijn documenten
+open=openen
+openitem=Open item
+projectgroupdocuments=projectgroep documenten
+projectgroups=projectgroepen
 projectnamenotempty=Naam mag niet leeg zijn
-deletecontactsyesno=Deze leden verwijderen?
-deletecontacts=Leden verwijderen
-
-
+react=reageer
+reactions=Reacties
+rename=hernoemen
+renamefolder=Hernoemen map
+renameprojectgroup=Hernoem projectgroep
+shareddocuments=Gedeelde documenten
+shareddocumentsmenuitem=klas documenten
+title=Titel
+type=Type
+workgroupdocuments=werkgroep documenten
+workgroupdocumentsmenuitem=werkgroep documenten
