--- a/contributions/didactor2/src/workspace/config/translations/workspace.properties
+++ b/contributions/didactor2/src/workspace/config/translations/workspace.properties
@@ -1,62 +1,54 @@
-mydocuments=My documents
+addchatlog=Add chatlog
 addcontacts=Edit members
-shareddocuments=Shared documents
-folders=Folders
-createfolder=Create folder
-renamefolder=Rename folder
-deletefolder=Delete folder
-title=Title
-description=Description
-filename=Filename
-date=Date
-create=create
-rename=rename
-move=move
-open=open
-movesingle=Move
-filesto=file(s) to:
-back=back
 adddocument=Add document
 addsource=Add source
-addchatlog=Add chatlog
-moveselected=Move selected
+addurl=Add URL
+back=back
+create=create
+createfolder=Create folder
+createprojectgroup=Create projectgroup
+date=Date
+deletecontacts=Remove members
+deletecontactsyesno=Remove these members?
+deletefolder=Delete folder
+deletefolderitems=Remove items
+deletefolderitemsyesno=Do you really to remove these items?
+deleteno=no
+deleteprojectgroup=Delete projectgroup
+deleteprojectgroupyesno=Remove this projectgroup?
 deleteselected=Delete selected
-selectoneitem=Select one or more items.
-folderopened=folder opened
+deletethisfolderyesno=Do you really want to remove this folder and everything in it?
+deleteyes=yes
+description=Description
+filename=Filename
+filesto=file(s) to:
 folderclosed=folder closed
-moveitems=Move items
-openitem=Open item
-folderitemtypeurl=infosource
+folderitemtypechatlog=chatlog
 folderitemtypedocument=document
 folderitemtypepage=page
-folderitemtypechatlog=chatlog
-type=Type
+folderitemtypeurl=infosource
 foldernamenotempty=Please give a name for the folder
+folderopened=folder opened
+folders=Folders
+move=move
+moveitems=Move items
+moveselected=Move selected
+movesingle=Move
+mydocuments=My documents
 mydocumentsmenuitem=my documents
-shareddocumentsmenuitem=class documents
-workgroupdocumentsmenuitem=workgroup documents
-workgroupdocuments=workgroup documents
+open=open
+openitem=Open item
 projectgroupdocuments=projectgroup documents
-deleteyes=yes
-deleteno=no
-deletethisfolderyesno=Do you really want to remove this folder and everything in it?
-deletefolderitemsyesno=Do you really to remove these items?
-deletefolderitems=Remove items
-addurl=Add URL
-save=save
-reactions=Reactions
-react=react
-portfolio=Portfolio
-choose_a_letter_or_search=Browse by letter or search
-search=Search
 projectgroups=projectgroups
-projectgroupnamenotemtpy=Name cannot be empty
-projectnamenotemtpy=Name cannot be empty
-deleteprojectgroups=Remove projectgroups
-deleteprojectgroupyesno=Remove this projectgroup?
-createprojectgroup=Create projectgroup
+projectnamenotempty=Name may not be empty
+react=react
+reactions=Reactions
+rename=rename
+renamefolder=Rename folder
 renameprojectgroup=Rename projectgroup
-deletecontactsyesno=Remove these members?
-deletecontacts=Remove members
-
-
+shareddocuments=Shared documents
+shareddocumentsmenuitem=class documents
+title=Title
+type=Type
+workgroupdocuments=workgroup documents
+workgroupdocumentsmenuitem=workgroup documents
