--- a/contributions/didactor2/src/core/config/translations/core.properties
+++ b/contributions/didactor2/src/core/config/translations/core.properties
@@ -29,3 +29,15 @@ deletethiscomponentyesno=Do you want to delete this component?
 home=home
 print=print
 listallportfolios=View all public portfolios
+studentonline=Student online
+studentoffline=Student offline
+teacheronline=Teacher online
+teacheroffline=Teacher offline
+editoronline=Editor online
+editoroffline=Editor offline
+administratoronline=Administrator online
+administratoroffline=Adminstrator offline
+providers=Providers
+emailaddress=Email address
+firstname=Firstname
+lastname=Lastname
