--- a/contributions/didactor2/src/education/config/translations/education.nl.properties
+++ b/contributions/didactor2/src/education/config/translations/education.nl.properties
@@ -1,191 +1,81 @@
-addressbook=Adresboek
-menuitemaddressbook=adresboek
-addcontact=Toevoegen contactpersoon
-deletecontact=Verwijderen contactpersoon
-updatecontact=Wijzigen contactpersoon
-selectoneitem=Selecteer minimaal een item door het aan te vinken.
-create=aanmaken
-back=terug
-update=wijzigen
-studentonline=Student online
-studentoffline=Student offline
-teacheronline=Leraar online
-teacheroffline=Leraar offline
-editoronline=Editor online
-editoroffline=Editor offline
-type=Type
-initials=Initialen
-firstname=Voornaam
-lastname=Achternaam
-email=Email
-address=Adres
-zipcode=Postcode
-city=Plaats
-telephone=Telefoon
-contact=Contactpersoon
-firstnamenotempty=Geef een waarde voor voornaam
-lastnamenotempty=Geef een waarde voor achternaam
-deleteyes=ja
-deleteno=nee
-deleteselectedcontactsyesno=Wilt u de geselecteerde contactpersonen echt verwijderen?
-calendar=Agenda
-addpersonalagendaitem=Persoonlijke afspraak plaatsen
-addclassagendaitem=Klas afspraak plaatsen
-addworkgroupagendaitem=Werkgroep afspraak plaatsen
-deleteagendaitem=Verwijderen afspraak
-agendaitemappointment=Agenda afspraak
-printagenda=afdrukken
-create=aanmaken
-back=terug
-class=Klas
-workgroup=Werkgroep
-appointment=Afspraak
-starttime=Start
-endtime=Eind
-starttimelessthanendtime=Starttijd moet later liggen dan de eindtijd
-chatmenuitem=chat
-chatlogmenuitem=chatverslag
-chatlogtitle=Chatverslag
-chatlogtitlelowercase=chatverslag
-folderopened=chatverslag geopend
-folderclosed=chatverslag gesloten
-addchatlogpersonal=Toevoegen chatverslag aan persoonlijke werkruimte
-addchatlogpublic=Toevoegen chatverslag aan publieke werkruimte
-education=Opleiding
-testwithoutquestions=Bij deze test zijn geen vragen vastgelegd.
+abbreviationrw=cre&euml;ren, lezen en schrijven
+abbreviationrwd=cre&euml;ren, lezen, schrijven en verwijderen
+again=Opnieuw
+areyousuredelrole=Weet u zeker dat u deze rol wilt verwijderen?
 buttontextdone=klaar
 buttontextnext=volgende
-educations=Opleidingen
+classes=Klassen
+complete=Afgerond
+coursemanagement=cursusbeheer
+createnewcouplingquestions=Maak een koppel vraag aan
+createnewcouplingquestionsdescription=Nieuwe koppel vraag aanmaken
+createnewdropquestions=Maak een drag-en-drop vraag aan
+createnewdropquestionsdescription=Nieuwe drag-en-drop vraag aanmaken
 createneweducation=Nieuwe Opleiding Aanmaken
 createneweducationdescription=Maak een nieuwe opleiding aan
-treateducation=Bewerk opleiding
-treat=bewerk
-contentmanagement=contentbeheer
-coursemanagement=cursusbeheer
-administrator=beheerder
-toempty=Voer een ontvanger in voor dit email bericht!
-subjectempty=Voer een onderwerp in voor dit email bericht!
-bodyempty=Voer de tekst van het bericht in!
-writemessage=schrijf bericht
-to=aan
-cc=cc
-addressbook=adresboek
-subject=onderwerp
-attachments=bijlage(s)
-send=verstuur
-back=terug
-administrators=beheerders
-teachers=docenten
-students=studenten
-usethese=gebruik deze
-hide=verberg
-name=naam
-emailtitle=E-mail
-mailboxes=E-Mail mappen
-writenewemail=Nieuwe e-mail schrijven
-moveselected=Verplaats geselecteerde
-deleteselected=Verwijder geselecteerde
-moveitems=Verplaatsen items
-create=aanmaken
-move=verplaatsen
-back=terug
-movesingle=Verplaats
-filesto=bestand(en) naar:
-createfolder=Aanmaken map
-renamefolder=Hernoemen map
-deletefolder=Verwijderen map
-mailboxnamenotempty=Geef een naam voor de map
-deleteyes=ja
-deleteno=nee
-deletethisfolderyesno=Wilt u deze map inclusief de inhoud echt verwijderen?
-deletefolderitemsyesno=Wilt u de geselecteerde mapitems echt verwijderen?
-deletefolderitems=Verwijder mapitems
-forum=Forum
-newforum=nieuw forum
-newtopic=nieuw onderwerp
-closeforum=sluit forum voor studenten
-message=Plaats bericht
-openforum=open forum voor studenten
-table_name=onderwerp
-table_no_posts=aantal posts
-table_latest_post=laatste
-by_user=door
-remove_thread=verwijder alle
-print=print
-remove=verwijder
-post=plaats
-back=terug
-notallowed_to_remove=Het is niet toegestaan het forum te verwijderen.
-create_forum_name=Forum naam
-create=aanmaken
-create_topic_name=onderwerp naam
-sources=Informatiebronnen
-categories=Categorieën
-folderopened=categorie geopend
-folderclosed=categorie gesloten
-urlname=Naam
-urllink=Link
-urldescription=Beschrijving
-sourcesmenuitem=informatiebronnen
-mydocuments=Mijn documenten
-shareddocuments=Gedeelde documenten
-folders=Mappen
-createfolder=Aanmaken map
-renamefolder=Hernoemen map
-deletefolder=Verwijderen map
-title=Titel
-description=Beschrijving
-filename=Bestand
-date=Datum
-create=aanmaken
-rename=hernoemen
-move=verplaatsen
-open=openen
-movesingle=Verplaats
-filesto=bestand(en) naar:
-back=terug
-adddocument=Document plaatsen
-addsource=Informatiebron plaatsen
-addchatlog=Chatverslag plaatsen
-moveselected=Verplaats geselecteerde
-deleteselected=Verwijder geselecteerde
-selectoneitem=Selecteer minimaal een item door het aan te vinken.
-folderopened=map geopend
-folderclosed=map gesloten
-moveitems=Verplaatsen items
-openitem=Open item
-folderitemtypeurl=informatiebron
-folderitemtypedocument=document
-folderitemtypepage=pagina
-folderitemtypechatlog=chatverslag
-type=Type
-foldernamenotempty=Geef een naam voor de map
-mydocumentsmenuitem=mijn documenten
-shareddocumentsmenuitem=gedeelde documenten
-deleteyes=ja
-deleteno=nee
-deletethisfolderyesno=Wilt u deze map inclusief de inhoud echt verwijderen?
-deletefolderitemsyesno=Wilt u de geselecteerde mapitems echt verwijderen?
-deletefolderitems=Verwijder mapitems
-learnenvironmenttitle=Leeromgeving
-editcomponents=Componenten beheer
-editcomponentsdescription=Ga naar het componenten beheer
-roles=Rollen Beheer
-editpeoplerolereleducation=Toevoegen/bewerken rollen
-editpeoplerolereleducationdescription=Bewerken rollen
-createnewroles=Nieuwe rol toevoegen
-createnewrolesdescription=Voeg een nieuwe rol toe aan de opleiding
-treatroles=Bewerk bestaande rol
-metadata=Metadata beheer
+createnewhotspotquestions=Maak een hotspot vraag aan
+createnewhotspotquestionsdescription=Nieuwe hotspot vraag aanmaken
+createnewlearnblock=Maak een nieuw leerblok aan
+createnewlearnblockdescription=Nieuw leerblok aanmaken
+createnewmcquestions=Maak een nieuwe multiple choice vraag aan
+createnewmcquestionsdescription=Nieuwe multiple choice vraag aanmaken
 createnewmetadatastandard=Voeg nieuwe metadata standaard toe
 createnewmetadatastandarddescription=Nieuwe metadata standaard toevoegen
-treatmetastandard=Bewerk bestaande metadata standaard
 createnewmetadefinition=Voeg nieuwe metadefinitie toe
 createnewmetadefinitiondescription=Nieuwe metadafinitie toevoegen
-treatmetadefinition=Bewerk bestaande metadefinitie
+createnewopenquestions=Maak een open vraag aan
+createnewopenquestionsdescription=Nieuwe open vraag aanmaken
+createnewrankingquestions=Maak een rangorde vraag aan
+createnewrankingquestionsdescription=Nieuwe rangorde vraag aanmaken
+createnewrole=Cre&euml;r een nieuwe rol
+createnewtest=Maak een nieuwe test aan
+createnewtestdescription=Nieuwe test aanmaken
+createnewvaluequestions=Maak een waarde vraag aan
+createnewvaluequestionsdescription=Nieuwe waardevraag aanmaken
+deletethisrole=verwijder deze rol
+editcomponents=Componenten beheer
+editcomponentsdescription=Ga naar het componenten beheer
 editeducation=Bewerk bestaande opleiding
-treatlearnobject=Bewerk bestaand leerobject
+editpeoplerolereleducation=Toevoegen/bewerken rollen
+editpeoplerolereleducationdescription=Bewerken rollen
+editwizards=EditWizards
+education=Opleiding
+educationmenucompetence=Competentie
+educationmenucomponents=Componenten
+educationmenucontentmetadata=Contentelementen
+educationmenueducations=Opleidingen
+educationmenufilemanagement=Filemanagement
+educationmenumetadata=Metadata
+educationmenupersons=Personen
+educationmenutests=Toetsen
+educations=Opleidingen
 filemanagement=Filemanagement
-workgroups=werkgroepen
+filemanagementdeleteprompt=Weet u zeker dat u dit bestand wilt verwijderen?
+filemanagementtablefileext=Bestandsextensie
+filemanagementtablename=Naam
+filemanagementtablesize=Grootte
+filemanagementtabletype=Type
+fileuploadok=Upload OK
+ftpfiles=FTP-BESTANDEN({$$$} ITEMS)
+ftpupload=Ftp functie
 isboimport=ISBO Import
-
+learnenvironmenttitle=Leeromgeving
+learnobject=Leerobject
+metadata=Metadata beheer
+ok=Ok
+persons=Personen
+personstab=Personen beheer
+reset=reset
+retry=Opnieuw
+roles=Rollen
+save=opslaan
+scormimport=SCORM Import
+selecthotspot=Selecteer hotspot
+tests=Toetsen beheer
+testwithoutquestions=Bij deze test zijn geen vragen vastgelegd.
+treatlearnobject=Bewerk bestaand leerobject
+treatmetadefinition=Bewerk bestaande metadefinitie
+treatmetastandard=Bewerk bestaande metadata standaard
+treattest=Bewerk bestaande toetsen
+view=Bekijk
+workgroups=Werkgroepen
