--- a/contributions/didactor2/src/education/config/translations/education.properties
+++ b/contributions/didactor2/src/education/config/translations/education.properties
@@ -1,55 +1,18 @@
-abbreviationrwd=cre&euml;ren, lezen, schrijven en verwijderen
 abbreviationrw=cre&euml;ren, lezen en schrijven
-addchatlog=Chatverslag plaatsen
-addchatlogpersonal=Toevoegen chatverslag aan persoonlijke werkruimte
-addchatlogpublic=Toevoegen chatverslag aan publieke werkruimte
-addclassagendaitem=Klas afspraak plaatsen
-addcontact=Toevoegen contactpersoon
-adddocument=Document plaatsen
-addpersonalagendaitem=Persoonlijke afspraak plaatsen
-address=Adres
-addressbook=Adresboek
-addsource=Informatiebron plaatsen
-addworkgroupagendaitem=Werkgroep afspraak plaatsen
-administrator=beheerder
-administrators=beheerders
-agendaitemappointment=Agenda afspraak
+abbreviationrwd=cre&euml;ren, lezen, schrijven en verwijderen
+again=Again
 areyousuredelrole=Weet u zeker dat u deze rol wilt verwijderen?
-appointment=Afspraak
-attachments=bijlage(s)
-back=terug
-bodyempty=Voer de tekst van het bericht in!
 buttontextdone=klaar
 buttontextnext=volgende
-by_user=door
-calendar=Agenda
-categories=Categorieën
-cc=cc
-chatlogmenuitem=chatverslag
-chatlogtitle=Chatverslag
-chatlogtitlelowercase=chatverslag
-chatmenuitem=chat
-city=Plaats
-class=Klas
 classes=Klassen
-closeforum=sluit forum voor studenten
-competence=Competentie beheer
-contact=Contactpersoon
-contentmanagement=contentbeheer
+complete=Complete
 coursemanagement=cursusbeheer
-create_forum_name=Forum naam
-create_topic_name=onderwerp naam
-create=aanmaken
-created_by=Aangemaakt door
-createfolder=Aanmaken map
 createnewcouplingquestions=Maak een koppel vraag aan
 createnewcouplingquestionsdescription=Nieuwe koppel vraag aanmaken
 createnewdropquestions=Maak een drag-en-drop vraag aan
 createnewdropquestionsdescription=Nieuwe drag-en-drop vraag aanmaken
 createneweducation=Nieuwe Opleiding Aanmaken
 createneweducationdescription=Maak een nieuwe opleiding aan
-createnewflash=Maak een nieuwe flash file aan
-createnewflashdescription=Nieuwe flash file aanmaken
 createnewhotspotquestions=Maak een hotspot vraag aan
 createnewhotspotquestionsdescription=Nieuwe hotspot vraag aanmaken
 createnewlearnblock=Maak een nieuw leerblok aan
@@ -62,8 +25,6 @@ createnewmetadefinition=Voeg nieuwe metadefinitie toe
 createnewmetadefinitiondescription=Nieuwe metadafinitie toevoegen
 createnewopenquestions=Maak een open vraag aan
 createnewopenquestionsdescription=Nieuwe open vraag aanmaken
-createnewpage=Maak een nieuwe pagina aan
-createnewpagedescription=Nieuwe pagina aanmaken
 createnewrankingquestions=Maak een rangorde vraag aan
 createnewrankingquestionsdescription=Nieuwe rangorde vraag aanmaken
 createnewrole=Cre&euml;r een nieuwe rol
@@ -71,144 +32,50 @@ createnewtest=Maak een nieuwe test aan
 createnewtestdescription=Nieuwe test aanmaken
 createnewvaluequestions=Maak een waarde vraag aan
 createnewvaluequestionsdescription=Nieuwe waardevraag aanmaken
-date=Datum
-deleteagendaitem=Verwijderen afspraak
-deletecontact=Verwijderen contactpersoon
-deletefolder=Verwijderen map
-deletefolderitems=Verwijder mapitems
-deletefolderitemsyesno=Wilt u de geselecteerde mapitems echt verwijderen?
-deleteno=nee
-deleteselected=Verwijder geselecteerde
-deleteselectedcontactsyesno=Wilt u de geselecteerde contactpersonen echt verwijderen?
-deletethisfolderyesno=Wilt u deze map inclusief de inhoud echt verwijderen?
 deletethisrole=verwijder deze rol
-deleteyes=ja
-description=Beschrijving
 editcomponents=Componenten beheer
 editcomponentsdescription=Ga naar het componenten beheer
 editeducation=Bewerk bestaande opleiding
-editoroffline=Editor offline
-editoronline=Editor online
 editpeoplerolereleducation=Toevoegen/bewerken rollen
 editpeoplerolereleducationdescription=Bewerken rollen
-educationmenucomponents=Componenten
-educationmenupersons=Personen
-educationmenucompetence=Competentie
-educationmenumetadata=Metadata
-educationmenucontentmetadata=Contentelementen
-educationmenufilemanagement=Filemanagement
-educationmenutests=Toetsen
-educationmenueducations=Opleidingen
+editwizards=EditWizards
 education=Opleiding
+educationmenucompetence=Competentie
+educationmenucomponents=Componenten
+educationmenucontentmetadata=Contentelementen
+educationmenueducations=Opleidingen
+educationmenufilemanagement=Filemanagement
+educationmenumetadata=Metadata
+educationmenupersons=Personen
+educationmenutests=Toetsen
 educations=Opleidingen
-email=Email
-emailtitle=E-mail
-endtime=Eind
 filemanagement=Filemanagement
-filemanagementtablename=Naam
-filemanagementtabletype=Type
-filemanagementtablesize=Grootte
-filemanagementtablefileext=Bestandsextensie
 filemanagementdeleteprompt=Weet u zeker dat u dit bestand wilt verwijderen?
+filemanagementtablefileext=Bestandsextensie
+filemanagementtablename=Naam
+filemanagementtablesize=Grootte
+filemanagementtabletype=Type
+fileuploadok=Upload OK
 ftpfiles=FTP-BESTANDEN({$$$} ITEMS)
 ftpupload=Ftp functie
-fileuploadok=Upload OK
-filename=Bestand
-filesto=bestand(en) naar:
-filesto=bestand(en) naar:
-firstname=Voornaam
-firstnamenotempty=Geef een waarde voor voornaam
-folderclosed=categorie gesloten
-folderclosed=chatverslag gesloten
-folderclosed=map gesloten
-folderitemtypechatlog=chatverslag
-folderitemtypedocument=document
-folderitemtypepage=pagina
-folderitemtypeurl=informatiebron
-foldernamenotempty=Geef een naam voor de map
-folderopened=categorie geopend
-folderopened=chatverslag geopend
-folderopened=map geopend
-folders=Mappen
-forum=Forum
-hide=verberg
-initials=Initialen
-lastname=Achternaam
-lastnamenotempty=Geef een waarde voor achternaam
+isboimport=ISBO Import
 learnenvironmenttitle=Leeromgeving
-mailboxes=E-Mail mappen
-mailboxnamenotempty=Geef een naam voor de map
-menuitemaddressbook=adresboek
-message=Plaats bericht
+learnobject=Learnobject
 metadata=Metadata beheer
-move=verplaatsen
-moveitems=Verplaatsen items
-moveselected=Verplaats geselecteerde
-movesingle=Verplaats
-mydocuments=Mijn documenten
-mydocumentsmenuitem=mijn documenten
-name=naam
-newforum=nieuw forum
-newtopic=nieuw onderwerp
-notallowed_to_remove=Het is niet toegestaan het forum te verwijderen.
-open=openen
-openforum=open forum voor studenten
-openitem=Open item
-post=plaats
+ok=Ok
 persons=Personen
 personstab=Personen beheer
-print=print
-printagenda=afdrukken
-remove_thread=verwijder alle
-remove=verwijder
-rename=hernoemen
-renamefolder=Hernoemen map
 reset=reset
+retry=Retry
 roles=Rollen
 save=opslaan
-selectoneitem=Selecteer minimaal een item door het aan te vinken.
-send=verstuur
-shareddocuments=Gedeelde documenten
-shareddocumentsmenuitem=gedeelde documenten
-sources=Informatiebronnen
-sourcesmenuitem=informatiebronnen
-starttime=Start
-starttimelessthanendtime=Starttijd moet later liggen dan de eindtijd
-studentoffline=Student offline
-studentonline=Student online
-students=studenten
-subject=onderwerp
-subjectempty=Voer een onderwerp in voor dit email bericht!
-table_latest_post=laatste
-table_name=onderwerp
-table_no_posts=aantal posts
-teacheroffline=Leraar offline
-teacheronline=Leraar online
-teachers=docenten
-telephone=Telefoon
-testwithoutquestions=Bij deze test zijn geen vragen vastgelegd.
+scormimport=SCORM Import
+selecthotspot=Select hotspot
 tests=Toetsen beheer
-title=Titel
-to=aan
-toempty=Voer een ontvanger in voor dit email bericht!
-treat=bewerk
-treateducation=Bewerk opleiding
+testwithoutquestions=Bij deze test zijn geen vragen vastgelegd.
 treatlearnobject=Bewerk bestaand leerobject
 treatmetadefinition=Bewerk bestaande metadefinitie
 treatmetastandard=Bewerk bestaande metadata standaard
-treatroles=Bewerk bestaande rol
 treattest=Bewerk bestaande toetsen
-type=Type
-update=wijzigen
-updatecontact=Wijzigen contactpersoon
-urldescription=Beschrijving
-urllink=Link
-urlname=Naam
-usethese=gebruik deze
-users=gebruikers
-workgroup=Werkgroep
-writemessage=schrijf bericht
-writenewemail=Nieuwe e-mail schrijven
-zipcode=Postcode
+view=View
 workgroups=Werkgroepen
-isboimport=ISBO Import
