Fixed english translations
git-svn-id: https://scm.mmbase.org/mmbase/trunk@15768 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/chat/config/translations/chat.properties
+++ b/contributions/didactor2/src/chat/config/translations/chat.properties
@@ -1,8 +1,8 @@
 chatmenuitem=chat
 chatlogmenuitem=chatlog
 chatlogtitle=Chat log
-chatlogtitlelowercase=chatvlog
+chatlogtitlelowercase=chatlog
 folderopened=chatlog opened
 folderclosed=chatlog closed
 addchatlogpersonal=Add chatlog to personal workspace
-addchatlogpublic=Toevoegen chatverslag aan publieke werkruimte
+addchatlogpublic=Add chatlog to public workspace
