--- a/contributions/didactor2/src/education/config/translations/education.properties
+++ b/contributions/didactor2/src/education/config/translations/education.properties
@@ -1,81 +1,81 @@
-abbreviationrw=cre&euml;ren, lezen en schrijven
-abbreviationrwd=cre&euml;ren, lezen, schrijven en verwijderen
+abbreviationrw=create, read and write
+abbreviationrwd=create, read, write and delete
 again=Again
-areyousuredelrole=Weet u zeker dat u deze rol wilt verwijderen?
-buttontextdone=klaar
-buttontextnext=volgende
-classes=Klassen
+areyousuredelrole=Are you sure you want to delete this role?
+buttontextdone=done
+buttontextnext=next
+classes=Classes
 complete=Complete
-coursemanagement=cursusbeheer
-createnewcouplingquestions=Maak een koppel vraag aan
-createnewcouplingquestionsdescription=Nieuwe koppel vraag aanmaken
-createnewdropquestions=Maak een drag-en-drop vraag aan
-createnewdropquestionsdescription=Nieuwe drag-en-drop vraag aanmaken
-createneweducation=Nieuwe Opleiding Aanmaken
-createneweducationdescription=Maak een nieuwe opleiding aan
-createnewhotspotquestions=Maak een hotspot vraag aan
-createnewhotspotquestionsdescription=Nieuwe hotspot vraag aanmaken
-createnewlearnblock=Maak een nieuw leerblok aan
-createnewlearnblockdescription=Nieuw leerblok aanmaken
-createnewmcquestions=Maak een nieuwe multiple choice vraag aan
-createnewmcquestionsdescription=Nieuwe multiple choice vraag aanmaken
-createnewmetadatastandard=Voeg nieuwe metadata standaard toe
-createnewmetadatastandarddescription=Nieuwe metadata standaard toevoegen
-createnewmetadefinition=Voeg nieuwe metadefinitie toe
-createnewmetadefinitiondescription=Nieuwe metadafinitie toevoegen
-createnewopenquestions=Maak een open vraag aan
-createnewopenquestionsdescription=Nieuwe open vraag aanmaken
-createnewrankingquestions=Maak een rangorde vraag aan
-createnewrankingquestionsdescription=Nieuwe rangorde vraag aanmaken
-createnewrole=Cre&euml;r een nieuwe rol
-createnewtest=Maak een nieuwe test aan
-createnewtestdescription=Nieuwe test aanmaken
-createnewvaluequestions=Maak een waarde vraag aan
-createnewvaluequestionsdescription=Nieuwe waardevraag aanmaken
-deletethisrole=verwijder deze rol
-editcomponents=Componenten beheer
-editcomponentsdescription=Ga naar het componenten beheer
-editeducation=Bewerk bestaande opleiding
-editpeoplerolereleducation=Toevoegen/bewerken rollen
-editpeoplerolereleducationdescription=Bewerken rollen
+coursemanagement=coursemanagement
+createnewcouplingquestions=Create a new coupling question
+createnewcouplingquestionsdescription=Create a new coupling question
+createnewdropquestions=Create a new drag-en-drop question
+createnewdropquestionsdescription=Create a new drag-en-drop question
+createneweducation=Create a new education
+createneweducationdescription=Create a new education
+createnewhotspotquestions=Create a new hotspot question
+createnewhotspotquestionsdescription=Create a new hotspot question
+createnewlearnblock=Create a new learnblock
+createnewlearnblockdescription=Create a new learnblock
+createnewmcquestions=Create a new multiple choice question
+createnewmcquestionsdescription=Create a new multiple choice question
+createnewmetadatastandard=Add a new metadata standard
+createnewmetadatastandarddescription=Add a new metadata standard
+createnewmetadefinition=Add a new metadata definition
+createnewmetadefinitiondescription=Add a new metadata definition
+createnewopenquestions=Create a new open question
+createnewopenquestionsdescription=Create a new open question
+createnewrankingquestions=Create a new ranking question
+createnewrankingquestionsdescription=Create a new ranking question
+createnewrole=Create a new role
+createnewtest=Create a new test
+createnewtestdescription=Create a new test
+createnewvaluequestions=Create a new value question
+createnewvaluequestionsdescription=Create a new value question
+deletethisrole=delete this role
+editcomponents=Component managment
+editcomponentsdescription=Go to the component management screen
+editeducation=Edit an existing education
+editpeoplerolereleducation=Add/edit roles
+editpeoplerolereleducationdescription=Edit roles
 editwizards=EditWizards
-education=Opleiding
-educationmenucompetence=Competentie
-educationmenucomponents=Componenten
-educationmenucontentmetadata=Contentelementen
-educationmenueducations=Opleidingen
+education=Education
+educationmenucompetence=Competece
+educationmenucomponents=Components
+educationmenucontentmetadata=Contentelements
+educationmenueducations=Education
 educationmenufilemanagement=Filemanagement
 educationmenumetadata=Metadata
-educationmenupersons=Personen
-educationmenutests=Toetsen
-educations=Opleidingen
+educationmenupersons=People
+educationmenutests=Tests
+educations=Educations
 filemanagement=Filemanagement
-filemanagementdeleteprompt=Weet u zeker dat u dit bestand wilt verwijderen?
-filemanagementtablefileext=Bestandsextensie
-filemanagementtablename=Naam
-filemanagementtablesize=Grootte
+filemanagementdeleteprompt=Are you sure you want to delete this file?
+filemanagementtablefileext=File extension
+filemanagementtablename=Name
+filemanagementtablesize=Size
 filemanagementtabletype=Type
 fileuploadok=Upload OK
-ftpfiles=FTP-BESTANDEN({$$$} ITEMS)
-ftpupload=Ftp functie
+ftpfiles=FTP-FILES({$$$} ITEMS)
+ftpupload=Ftp function
 isboimport=ISBO Import
-learnenvironmenttitle=Leeromgeving
+learnenvironmenttitle=Learnenvironment
 learnobject=Learnobject
-metadata=Metadata beheer
+metadata=Metadata management
 ok=Ok
-persons=Personen
-personstab=Personen beheer
+persons=People
+personstab=People management
 reset=reset
 retry=Retry
-roles=Rollen
-save=opslaan
+roles=Roles
+save=save
 scormimport=SCORM Import
 selecthotspot=Select hotspot
-tests=Toetsen beheer
-testwithoutquestions=Bij deze test zijn geen vragen vastgelegd.
-treatlearnobject=Bewerk bestaand leerobject
-treatmetadefinition=Bewerk bestaande metadefinitie
-treatmetastandard=Bewerk bestaande metadata standaard
-treattest=Bewerk bestaande toetsen
+tests=Test management
+testwithoutquestions=This test does not have any questions defined
+treatlearnobject=Edit existing learnobject
+treatmetadefinition=Edit existing metadata definition
+treatmetastandard=Edit existing metadata standard
+treattest=Edit existing tests
 view=View
-workgroups=Werkgroepen
+workgroups=Workgroups
