--- a/contributions/didactor2/src/sources/config/translations/sources.nl.properties
+++ b/contributions/didactor2/src/sources/config/translations/sources.nl.properties
@@ -1,5 +1,5 @@
 sources=Informatiebronnen
-categories=Categorieën
+categories=Categori&euml;n
 folderopened=Categorie geopend
 folderclosed=Categorie gesloten
 urlname=Naam
