Added extra translation keys
git-svn-id: https://scm.mmbase.org/mmbase/trunk@15878 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/core/config/translations/core.nl.properties
+++ b/contributions/didactor2/src/core/config/translations/core.nl.properties
@@ -43,3 +43,5 @@ firstname=Voornaam
 lastname=Achternaam
 validatelogin_noclass=Je bent nog niet ingedeeld in een klas
 validatelogin_invalid=De cursus is nog niet gestart, of al afgelopen
+users_educationheader=Opleiding:
+users_classheader=Klas:
