--- a/contributions/didactor2/src/core/config/translations/core.properties
+++ b/contributions/didactor2/src/core/config/translations/core.properties
@@ -43,3 +43,5 @@ firstname=Firstname
 lastname=Lastname
 validatelogin_noclass=You are not yet assigned to a class
 validatelogin_invalid=The course has not yet started, or has finished already
+users_educationheader=Education:
+users_classheader=Class:
