French translation updates; fixes for valid UTF-8
git-svn-id: https://scm.mmbase.org/mmbase/trunk@16030 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/address/config/translations/address.fr.properties
+++ b/contributions/didactor2/src/address/config/translations/address.fr.properties
@@ -1,6 +1,6 @@
 addcontact=Ajouter contact
 address=Adresse
-addressbook=Carnet dadresses
+addressbook=Carnet d'adresses
 back=Retour
 city=Commune
 contact=Personne de contact
@@ -15,7 +15,7 @@ firstnamenotempty=Un prénom est requis
 initials=Initiales
 lastname=Nom de famille	
 lastnamenotempty=Un nom de famille est requis 
-menuitemaddressbook=Carnet dadresses
+menuitemaddressbook=Carnet d'adresses
 search=Rechercher
 telephone=Téléphone
 type=Type
