--- a/contributions/didactor2/src/competence/config/translations/competence.fr.properties
+++ b/contributions/didactor2/src/competence/config/translations/competence.fr.properties
@@ -9,7 +9,7 @@ competencematrixprofile=Le {$$$} est entièrement capable de
 competencetypesmatrixsearchresultsitems=COMPETENCES({$$$} éléments)
 competencetypesmatrixsearchresultsitemsdescription=Ceci sont les éléments que vous pouvez modifier
 competencetypesmatrixsearchresultstitle=Résultats de la recherche:
-competencetypesmatrixsearchtimetoday=aujourdhui
+competencetypesmatrixsearchtimetoday=aujourd'hui
 competencetypesmatrixsearchtimeday=1 jour
 competencetypesmatrixsearchtimeweek=7 jours
 competencetypesmatrixsearchtimemonth=1 mois
@@ -35,6 +35,7 @@ competencetreeitempostgradesdescription=Modifier ces post-assesments
 competencetreeitemprofiles=Profils
 competencetreeitemprofilesdescription=Modifier profils
 competencetreeitempep=Plan de formation individuel
-competencetreeitempepdescription=Afficher le plan de formation individuel competencetreeitemcreatenewprofile=Nouveau profil
+competencetreeitempepdescription=Afficher le plan de formation individuel 
+competencetreeitemcreatenewprofile=Nouveau profil
 competencetreeitemcreatenewprofiledescription=Créer un nouveau profil
 
