--- a/contributions/didactor2/src/email/config/translations/email.fr.properties
+++ b/contributions/didactor2/src/email/config/translations/email.fr.properties
@@ -1,4 +1,4 @@
-addressbook=Carnet dadresses
+addressbook=Carnet d'adresses
 administrators=administrateurs
 attachments=Annexe(s)
 back=Retour
@@ -22,8 +22,8 @@ filesto=fichier(s) vers:
 folder=Boîte à courrier
 forward=Transmettre
 hide=Cacher
-lookup_cc=Rechercher cc
-lookup_to=Rechercher à
+lookup_cc=Rechercher 'cc'
+lookup_to=Rechercher 'à'
 mailbox=Boîte à courrier
 mailboxes=Boîtes à courrier
 mailboxnamenotempty=Donner un nom à la boîte à courrier
