--- a/contributions/didactor2/src/core/config/translations/core.fr.properties
+++ b/contributions/didactor2/src/core/config/translations/core.fr.properties
@@ -1,7 +1,7 @@
-logindidactor=Sannoncer dans Didactor
-username=nom dutilisateur :
+logindidactor=S'annoncer dans Didactor
+username=nom d'utilisateur :
 password=mot de passe :
-login=Sannoncer
+login=S'annoncer
 welcome=Bienvenue!
 news=Nouvelles ...
 logout=Quitter
@@ -41,8 +41,9 @@ providers=Fournisseurs
 emailaddress=Adresse courriel
 firstname=Prénom
 lastname=Nom de famille
-validatelogin_noclass=Vous ne faites pas encore partie dune classe
-validatelogin_noroles= Vous ne faites pas encore partie dune classe validatelogin_invalid=Le cours na pas encore commencé, ou est déjà terminé
+validatelogin_noclass=Vous ne faites pas encore partie d'une classe
+validatelogin_noroles= Vous ne faites pas encore partie d'une classe
+validatelogin_invalid=Le cours na pas encore commencé, ou est déjà terminé
 users_educationheader=Formation:
 users_classheader=Classe:
 
