--- a/contributions/didactor2/src/education/config/translations/education.fr.properties
+++ b/contributions/didactor2/src/education/config/translations/education.fr.properties
@@ -7,30 +7,31 @@ buttontextnext=suivant
 classes=Classes
 complete=complet
 coursemanagement=gestion du cours
-createnewcouplingquestions=Créer une question filière
-createnewcouplingquestionsdescription=Créer une nouvelle question filière
-createnewdropquestions=Créer une question drag&drop
-createnewdropquestionsdescription=Créer une nouvelle question drag&drop
+createnewcouplingquestions=Créer une question 'filière'
+createnewcouplingquestionsdescription=Créer une nouvelle question 'filière'
+createnewdropquestions=Créer une question 'drag&drop'
+createnewdropquestionsdescription=Créer une nouvelle question 'drag&drop'
 createneweducation=Créer une formation
 createneweducationdescription=Créer une nouvelle formation
-createnewhotspotquestions=Créer une question hotspot
-createnewhotspotquestionsdescription=Créer une nouvelle question hotspot
+createnewhotspotquestions=Créer une question 'hotspot'
+createnewhotspotquestionsdescription=Créer une nouvelle question 'hotspot'
 createnewlearnblock=Créer un bloc de cours
-createnewlearnblockdescription= Créer un nouveau bloc de cours createnewmcquestions=Créer une question « multiple choice »
-createnewmcquestionsdescription= Créer une nouvelle question « multiple choice »
+createnewlearnblockdescription= Créer un nouveau bloc de cours
+createnewmcquestions=Créer une question 'multiple choice'
+createnewmcquestionsdescription= Créer une nouvelle question 'multiple choice'
 createnewmetadatastandard=Ajouter un standard métadata
 createnewmetadatastandarddescription=Ajouter un nouveau standard métadata
 createnewmetadefinition=Ajouter définition métadata
 createnewmetadefinitiondescription= Ajouter nouvelle définition métadata
-createnewopenquestions=Créer une question ouverte
-createnewopenquestionsdescription= Créer une nouvelle question ouverte
-createnewrankingquestions=Créer une question classement
-createnewrankingquestionsdescription= Créer une nouvelle question classement
+createnewopenquestions=Créer une question 'ouverte'
+createnewopenquestionsdescription= Créer une nouvelle question 'ouverte'
+createnewrankingquestions=Créer une question 'classement'
+createnewrankingquestionsdescription= Créer une nouvelle question 'classement'
 createnewrole=Créer un rôle
 createnewtest=Créer un test
 createnewtestdescription= Créer un nouveau test
-createnewvaluequestions=Créer une question valeur
-createnewvaluequestionsdescription= Créer une nouvelle question valeur
+createnewvaluequestions=Créer une question 'valeur'
+createnewvaluequestionsdescription= Créer une nouvelle question 'valeur'
 deletethisrole=supprimer ce rôle
 editcomponents=Gestion des composants
 editcomponentsdescription=Visualiser la gestion des composants
@@ -69,7 +70,7 @@ retry=essayer à nouveau
 roles=Rôles
 save=sauvegarder
 scormimport=Import SCORM 
-selecthotspot=Choisir hotspot
+selecthotspot=Choisir 'hotspot'
 tests=Gestion des tests
 testwithoutquestions=Il ny a pas de questions pour ce test.
 treatlearnobject=Mettre à jour élément de la formation
